feat: react base architecture + login form

--- a/templates/react_app/appEntryPoint.html.twig
+++ b/templates/react_app/appEntryPoint.html.twig
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="{{ asset('dist/favicon.svg') }}" />
-    <title>Moins7 ERP</title>
+    <title>Zist</title>
       {{ encore_entry_link_tags('cube_app') }}
 
   </head>
