--- a/templates/react_app/appEntryPoint.html.twig
+++ b/templates/react_app/appEntryPoint.html.twig
@@ -5,7 +5,7 @@
   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="{{ asset('dist/favicon.svg') }}" />
+    <link rel="icon" href="{{ asset('dist/svg/logo-rocket.svg') }}" />
     <title>Zist</title>
       {{ encore_entry_link_tags('cube_app') }}
 
